k8s/apps/overseerr/templates/overseerr-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/description: Manage requests for media library
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: overseerr.png
    gethomepage.dev/name: Overseerr
    gethomepage.dev/pod-selector: ""
    kompose.cmd: kompose convert --chart
    kompose.service.expose: overseerr.mdeleon.dev
    kompose.service.expose.tls-secret: overseerr-tls-cert
    kompose.service.type: clusterip
    kompose.version: 1.31.2 (HEAD)
    kompose.volume.size: 1Gi
  creationTimestamp: null
  labels:
    io.kompose.service: overseerr
  name: overseerr
spec:
  ports:
    - name: "5055"
      port: 5055
      targetPort: 5055
  selector:
    io.kompose.service: overseerr
  type: ClusterIP
status:
  loadBalancer: {}
