k8s/apps/overseerr/templates/overseerr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/description: Manage requests for media library
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: overseerr.png
    gethomepage.dev/name: Overseerr
    gethomepage.dev/pod-selector: ""
    kompose.cmd: kompose convert --chart
    kompose.service.expose: overseerr.mdeleon.dev
    kompose.service.expose.tls-secret: overseerr-tls-cert
    kompose.service.type: clusterip
    kompose.version: 1.31.2 (HEAD)
    kompose.volume.size: 1Gi
  creationTimestamp: null
  labels:
    io.kompose.service: overseerr
  name: overseerr
spec:
  rules:
    - host: overseerr.mdeleon.dev
      http:
        paths:
          - backend:
              service:
                name: overseerr
                port:
                  number: 5055
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - overseerr.mdeleon.dev
      secretName: overseerr-tls-cert
status:
  loadBalancer: {}
